--- a/index.html
+++ b/index.html
@@ -77,19 +77,28 @@
 
     </main>
 
-    <!-- <footer>
+    <footer class="rodape">
 
-        <a href=""></a>
+        <a href="index.html" class="logo"></a>
+            <img src="/src/images/logo.jpg" alt="logo">
 
         <ul>
-            <li><a href="">Quem somos</a></li>
-            <li><a href="">Onde estamos</a></li>
-            <li><a href="">Contato</a></li>
+            <li><a href="#quem-somos">Quem somos</a></li>
+            <li><a href="#onde-estamos">Onde estamos</a></li>
+            <li><a href="#contato">Contato</a></li>
         </ul>
 
-
-        <div class="redes-sociais"></div>
-        <div class="copyright">© 2021 Code Café</div>
-    </footer> -->
+        <div>
+            <div class="redes-sociais">
+                <a href="#" target="_blank">
+                    <img class="facebook" src="/src/images/face.png" title="Logo Facebook" alt="Logo Facebook">
+                </a>
+                <a href="#" targe="_blank">
+                    <img class="instagram" src="/src/images/insta.png" title="Logo Instagram" alt="Logo Instagram">
+                </a>
+            </div> 
+                <div class="copyright">© 2021 Code Café</div>
+        </div>     
+    </footer>
 </body>
 </html>
