Corrigindo bugs criados por mim

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
         <section class="secao-com-texto onde-estamos" id="onde-estamos">
             <header>
-                <img src="/src/images/logo-secoes.png" alt="imagem da pagina">
+                <img src="src/images/logo-secoes.png" alt="imagem da pagina">
                 <h2>Onde estamos</h2>
                 <p>Avenida Brigadeiro Faria Lima, 444 <br>
                     São Paulo
@@ -81,7 +81,7 @@
     <footer class="rodape">
 
         <a href="index.html" class="logo"></a>
-            <img src="/src/images/logo.jpg" alt="logo">
+            <img src="src/images/logo.jpg" alt="logo">
 
         <ul>
             <li><a href="#quem-somos">Quem somos</a></li>
@@ -92,10 +92,10 @@
         <div>
             <div class="redes-sociais">
                 <a href="#" target="_blank">
-                    <img class="facebook" src="/src/images/face.png" title="Logo Facebook" alt="Logo Facebook">
+                    <img class="facebook" src="src/images/face.png" title="Logo Facebook" alt="Logo Facebook">
                 </a>
                 <a href="#" targe="_blank">
-                    <img class="instagram" src="/src/images/insta.png" title="Logo Instagram" alt="Logo Instagram">
+                    <img class="instagram" src="src/images/insta.png" title="Logo Instagram" alt="Logo Instagram">
                 </a>
             </div> 
                 <div class="copyright">© 2021 Code Café</div>
